Finalizações da explicação dos modelos

--- a/Modelo-PO/Modelo Alocação - V1.ipynb
+++ b/Modelo-PO/Modelo Alocação - V1.ipynb
@@ -1,6 +1,57 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Problema de Designação de Pessoas para Instrumentos e Vozes em Dias Específicos\n",
+    "\n",
+    "## Conjuntos\n",
+    "- **i**: Conjunto de pessoas.\n",
+    "- **j**: Conjunto de instrumentos.\n",
+    "- **k**: Conjunto de dias.\n",
+    "\n",
+    "## Parâmetros e Variáveis\n",
+    "- **P(i, j)**: Matriz binária indicando se a pessoa **i** pode tocar o instrumento **j**.\n",
+    "- **L(j)**: Peso de cada instrumento **j** (variando de 0 a 10).\n",
+    "- **D['Peso'][k]**: Peso de cada dia **k** (variando de 0 a 10).\n",
+    "- **Disp(i, k)**: Disponibilidade da pessoa **i** no dia **k**.\n",
+    "- **DPM['Quantidade'][i]**: Quantidade de dias que a pessoa **i** se ofereceu para ajudar por mês.\n",
+    "\n",
+    "### Variável de Decisão\n",
+    "- **X(i, j, k)**: Matriz de solução binária indicando se a pessoa **i** toca o instrumento **j** no dia **k**.\n",
+    "\n",
+    "## Função Objetivo\n",
+    "A função objetivo maximiza a eficácia da alocação de pessoas para tocar instrumentos levando em consideração a disponibilidade, habilidades e os pesos atribuídos aos dias, instrumentos e vozes. A fórmula matemática é:\n",
+    "\n",
+    "Max Somatório em {i,j,k} de X(i,j,k) * Disp(i,k) * P(i,j) * L(j) * D['Peso'][k]\n",
+    "\n",
+    "## Restrições\n",
+    "1. **Cada instrumento é tocado por uma pessoa por dia**:\n",
+    "   - Cada instrumento deve ser tocado por uma única pessoa em um dia.\n",
+    "   \n",
+    "      Somatório em {i} de X(i,j,k) <= 1, ∀j, ∀k\n",
+    "\n",
+    "2. **Cada pessoa toca somente um instrumento por dia**:\n",
+    "   - Uma pessoa só pode tocar um instrumento em um dia.\n",
+    "   \n",
+    "      Somatório em {j} de X(i,j,k) <= 1, ∀i, ∀k\n",
+    "\n",
+    "3. **Cada pessoa toca somente o número de dias que se ofereceu por mês**:\n",
+    "   - A quantidade de dias que uma pessoa se ofereceu para tocar não pode ser excedida.\n",
+    "   \n",
+    "      Somatório em {j} de (X(i,j,k,) + X(i,j,k+1) + X(i,j,k+2) + X(i,j,k+3)) <= DPM['Quantidade'][i] ∀i, ∀k\n",
+    "\n",
+    "4. **Pessoa não será alocada se não tocar o instrumento específico**:\n",
+    "   - Se uma pessoa não sabe tocar um instrumento específico, ela não será alocada para tocá-lo.\n",
+    "   \n",
+    "      X(i,j,k) = 0, se P(i,j) = 0, ∀i, ∀j, ∀k\n",
+    "\n",
+    "### Descrição do Modelo\n",
+    "   O modelo busca alocar pessoas para tocar instrumentos em determinadas vozes nos dias disponíveis, maximizando a utilização das suas habilidades e disponibilidades. A função objetivo valoriza as alocações que melhor utilizam a disponibilidade das pessoas e os pesos atribuídos aos dias, instrumentos e vozes. As restrições garantem uma alocação eficiente e justa, respeitando as capacidades e disponibilidades de cada pessoa, e assegurando que cada recurso (instrumento, voz) seja utilizado adequadamente."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
