--- a/Modelo-PO/Modelo Alocação - V2 .ipynb
+++ b/Modelo-PO/Modelo Alocação - V2 .ipynb
@@ -20,6 +20,8 @@
     "- **D['Peso'][k]**: Peso de cada dia **k** (variando de 0 a 10).\n",
     "- **Disp(i, k)**: Disponibilidade da pessoa **i** no dia **k**.\n",
     "- **DPM['Quantidade'][i]**: Quantidade de dias que a pessoa **i** se ofereceu para ajudar por mês.\n",
+    "- ***vetor_vozes[l]*** e ***vetor_instrumentos[j]*** = Vetor que controla a particiapação de mais de uma pessoa em uma posição por dia. Pecisamos regular o número de pessoas limite em instrumentos e vozes, mas, além disso, o espaço é quadridimensional, portanto, há a necessidade da existência de posições em que cantores não toquem nada naquele dia. Assim, foram criadas posições nestes conjuntos (voz e instrumento) que indicam inatividade, mas, dada as restrições 2 e 3, isso limitaria a alocação de pessoas, uma vez que teríamos somente pessoas que tocam e cantam e, no máximo uma que canta e não toca, e outra que toca e não canta. Assim, os vetores têm o valor 1 para instrumentos e vozes válidas e 0 para os inválidos, permitindo a alocação de infinitas pessoas nessas posições, caso necessário.\n",
+    "\n",
     "\n",
     "### Variável de Decisão\n",
     "- **X(i, j, k, l)**: Variável binária indicando se a pessoa **i** toca o instrumento **j** e canta a voz **l** no dia **k**.\n",
@@ -43,7 +45,7 @@
     "3. **Cada instrumento é tocado por uma pessoa por dia**:\n",
     "   - Cada instrumento deve ser tocado por uma única pessoa em um dia.\n",
     "   \n",
-    "      Somatório em {i,l} de X(i,j,k,l) * vetor\\_inst[j] <= 1, ∀j, ∀k\n",
+    "      Somatório em {i,l} de X(i,j,k,l) * vetor_inst[j] <= 1, ∀j, ∀k\n",
     "\n",
     "4. **Cada pessoa toca somente um instrumento por dia**:\n",
     "   - Uma pessoa só pode tocar um instrumento em um dia.\n",
@@ -53,7 +55,7 @@
     "5. **Cada pessoa toca somente o número de dias que se ofereceu por mês**:\n",
     "   - A quantidade de dias que uma pessoa se ofereceu para tocar não pode ser excedida.\n",
     "   \n",
-    "      Somatório em {j,l} de (X(i,j,k,l) + X(i,j,k+1,l) + X(i,j,k+2,l) + X(i,j,k+3,l)) <= DPM['Quantidade'][i], ∀i, ∀k \\in \\{0, \\dots, |D.index|-4\\}\n",
+    "      Somatório em {j,l} de (X(i,j,k,l) + X(i,j,k+1,l) + X(i,j,k+2,l) + X(i,j,k+3,l)) <= DPM['Quantidade'][i], ∀i, ∀k \\in\n",
     "\n",
     "6. **Pessoa não será alocada se não tocar o instrumento específico**:\n",
     "   - Se uma pessoa não sabe tocar um instrumento específico, ela não será alocada para tocá-lo.\n",
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,8 +100,8 @@
     "D.index = D.index.strftime('%d_%m_%Y')\n",
     "Disp.index = Disp.index.strftime('%d_%m_%Y')\n",
     "\n",
-    "vetor = pd.Series(1, index=V.columns)\n",
-    "vetor['Nada'] = 0\n",
+    "vetor_vozes = pd.Series(1, index=V.columns)\n",
+    "vetor_vozes['Nada'] = 0\n",
     "\n",
     "vetor_inst = pd.Series(1, index=P.columns)\n",
     "vetor_inst['Nenhum'] = 0"
@@ -107,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +120,7 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /home/henrique/.local/lib/python3.10/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/3de015437a97455f89ef5b965bf7ca75-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/3de015437a97455f89ef5b965bf7ca75-pulp.sol (default strategy 1)\n",
+      "command line - /home/henrique/.local/lib/python3.10/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/45bde82eec864a6287db509f8d4b5937-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/45bde82eec864a6287db509f8d4b5937-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
       "At line 5216 COLUMNS\n",
@@ -144,10 +146,10 @@
       "Cbc0038I Initial state - 0 integers unsatisfied sum - 0\n",
       "Cbc0038I Solution found of -2666\n",
       "Cbc0038I Before mini branch and bound, 1859 integers at bound fixed and 0 continuous\n",
-      "Cbc0038I Mini branch and bound did not improve solution (0.33 seconds)\n",
-      "Cbc0038I After 0.33 seconds - Feasibility pump exiting with objective of -2666 - took 0.00 seconds\n",
-      "Cbc0012I Integer solution of -2666 found by feasibility pump after 0 iterations and 0 nodes (0.33 seconds)\n",
-      "Cbc0001I Search completed - best objective -2666, took 0 iterations and 0 nodes (0.33 seconds)\n",
+      "Cbc0038I Mini branch and bound did not improve solution (0.32 seconds)\n",
+      "Cbc0038I After 0.32 seconds - Feasibility pump exiting with objective of -2666 - took 0.00 seconds\n",
+      "Cbc0012I Integer solution of -2666 found by feasibility pump after 0 iterations and 0 nodes (0.32 seconds)\n",
+      "Cbc0001I Search completed - best objective -2666, took 0 iterations and 0 nodes (0.32 seconds)\n",
       "Cbc0035I Maximum depth 0, 0 variables fixed on reduced cost\n",
       "Cuts at root node changed objective from -2666 to -2666\n",
       "Probing was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
@@ -165,10 +167,10 @@
       "Enumerated nodes:               0\n",
       "Total iterations:               0\n",
       "Time (CPU seconds):             0.33\n",
-      "Time (Wallclock seconds):       0.35\n",
+      "Time (Wallclock seconds):       0.34\n",
       "\n",
       "Option for printingOptions changed from normal to all\n",
-      "Total time (CPU seconds):       0.39   (Wallclock seconds):       0.40\n",
+      "Total time (CPU seconds):       0.39   (Wallclock seconds):       0.41\n",
       "\n"
      ]
     }
@@ -200,7 +202,7 @@
     "# Cada voz é cantada por apenas uma pessoa por dia\n",
     "for l in V.columns:  # para cada voz\n",
     "    for k in D.index:  # para cada dia\n",
-    "        prob += lpSum([X[i][j][k][l]*vetor[l] for i in P.index for j in P.columns]) <= 1\n",
+    "        prob += lpSum([X[i][j][k][l]*vetor_vozes[l] for i in P.index for j in P.columns]) <= 1\n",
     "\n",
     "# Um instrumento só é tocado por uma pessoa em cada dia K\n",
     "for j in P.columns:  # para todo instrumento\n",
@@ -262,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +422,7 @@
        "31_08_2024    Henrique    Rafael     Tassi   Ricardo"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +600,7 @@
        "31_08_2024    Israel  Ricardo  Henrique    Rafael   Daniel"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
