Correção do output da V2

--- a/Modelo-PO/Modelo Alocação - V2 .ipynb
+++ b/Modelo-PO/Modelo Alocação - V2 .ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /home/henrique/.local/lib/python3.10/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/45bde82eec864a6287db509f8d4b5937-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/45bde82eec864a6287db509f8d4b5937-pulp.sol (default strategy 1)\n",
+      "command line - /home/henrique/.local/lib/python3.10/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/600811399185440680938985d149c333-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/600811399185440680938985d149c333-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
       "At line 5216 COLUMNS\n",
@@ -146,10 +146,10 @@
       "Cbc0038I Initial state - 0 integers unsatisfied sum - 0\n",
       "Cbc0038I Solution found of -2666\n",
       "Cbc0038I Before mini branch and bound, 1859 integers at bound fixed and 0 continuous\n",
-      "Cbc0038I Mini branch and bound did not improve solution (0.32 seconds)\n",
-      "Cbc0038I After 0.32 seconds - Feasibility pump exiting with objective of -2666 - took 0.00 seconds\n",
-      "Cbc0012I Integer solution of -2666 found by feasibility pump after 0 iterations and 0 nodes (0.32 seconds)\n",
-      "Cbc0001I Search completed - best objective -2666, took 0 iterations and 0 nodes (0.32 seconds)\n",
+      "Cbc0038I Mini branch and bound did not improve solution (0.30 seconds)\n",
+      "Cbc0038I After 0.30 seconds - Feasibility pump exiting with objective of -2666 - took 0.00 seconds\n",
+      "Cbc0012I Integer solution of -2666 found by feasibility pump after 0 iterations and 0 nodes (0.30 seconds)\n",
+      "Cbc0001I Search completed - best objective -2666, took 0 iterations and 0 nodes (0.30 seconds)\n",
       "Cbc0035I Maximum depth 0, 0 variables fixed on reduced cost\n",
       "Cuts at root node changed objective from -2666 to -2666\n",
       "Probing was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
@@ -166,18 +166,17 @@
       "Objective value:                2666.00000000\n",
       "Enumerated nodes:               0\n",
       "Total iterations:               0\n",
-      "Time (CPU seconds):             0.33\n",
-      "Time (Wallclock seconds):       0.34\n",
+      "Time (CPU seconds):             0.30\n",
+      "Time (Wallclock seconds):       0.31\n",
       "\n",
       "Option for printingOptions changed from normal to all\n",
-      "Total time (CPU seconds):       0.39   (Wallclock seconds):       0.41\n",
+      "Total time (CPU seconds):       0.36   (Wallclock seconds):       0.37\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "from pulp import LpVariable, LpProblem, lpSum, LpMaximize, value\n",
+    "from pulp import *\n",
     "\n",
     "# Definindo a variável X como uma variável de 4 dimensões (i, j, k, l)\n",
     "X = LpVariable.dicts(\"X\", (P.index, P.columns, D.index, V.columns), cat='Binary')\n",
@@ -264,14 +263,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valor da Função Objetivo: 2666.0\n"
+      "Status: Optimal\n",
+      "Valor da função objetivo = 2666.0\n"
      ]
     },
     {
@@ -422,13 +422,17 @@
        "31_08_2024    Henrique    Rafael     Tassi   Ricardo"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"Valor da Função Objetivo:\", value(prob.objective))\n",
+    "# Imprimir o status da solução\n",
+    "print(\"Status:\", LpStatus[prob.status])\n",
+    "\n",
+    "# Imprimir o valor da função objetivo\n",
+    "print(\"Valor da função objetivo =\", value(prob.objective))\n",
     "vozes_por_dia"
    ]
   },
