Correção do texto da V1

--- a/Modelo-PO/Modelo Alocação - V1.ipynb
+++ b/Modelo-PO/Modelo Alocação - V1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Problema de Designação de Pessoas para Instrumentos e Vozes em Dias Específicos\n",
+    "# Problema de Designação de Pessoas para Instrumentos em Dias Específicos\n",
     "\n",
     "## Conjuntos\n",
     "- **i**: Conjunto de pessoas.\n",
